re PR middle-end/22439 (ICE with char VLA and __SIZE_TYPE__ argument (so no cast))

PR 22439
        * gimplify.c (gimplify_one_sizepos): Preserve the original type.

From-SVN: r102880